<resources>
    <string name="app_name">SmartRemote</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_not_enabled">Wifi disabled</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="sleep">Sleep</string>
    <string name="wake">Wake</string>
    <string name="connected">Connected</string>
    <string name="wifi_connected">Wifi Connected</string>
    <string name="not_responding">Mirror not responding</string>

    <!-- button names -->
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="help">Help</string>
    <string name="listening">Listening</string>
    <string name="power">Wake/Sleep</string>
    <string name="screen_size">Screen Size</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="scroll_down">Scroll Down</string>

    <!-- settings -->
    <string name="stay_awake">Stay Awake</string>
    <string name="sound">Sound</string>
    <string name="voice">Listening</string>
    <string name="time_format">Time Format</string>
    <string name="time_visible">Time Visible</string>
    <string name="weather_format">Weather Format</string>
    <string name="weather_visible">Weather Visible</string>

    <!-- news -->
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="economics">Economics</string>
    <string name="environment">Environment</string>
    <string name="fashion">Fashion</string>
    <string name="games">Games</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="media">Media</string>
    <string name="movies">Movies</string>
    <string name="opinion">Opinion</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="travel">Travel</string>
    <string name="world">World</string>

    <!-- article controls -->
    <string name="one">Article 1</string>
    <string name="two">Article 2</string>
    <string name="three">Article 3</string>
    <string name="four">Article 4</string>
    <string name="five">Article 5</string>
    <string name="six">Article 6</string>
    <string name="seven">Article 7</string>
    <string name="eight">Article 8</string>
    <string name="nine">Article 9</string>
    <string name="ten">Article 10</string>

    <!-- camera -->
    <string name="take_picture">Take a Picture</string>

    <!-- gmail-->
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!-- music -->
    <string name="alternative">Alternative</string>
    <string name="ambient">Ambient</string>
    <string name="classical">Classical</string>
    <string name="dance">Dance</string>
    <string name="jazz">Jazz</string>
    <string name="rap">Rap</string>
    <string name="rock">Rock</string>

    <!-- play controls -->
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

    <!-- menu /fragment names -->
    <string name="calendar">Calendar</string>
    <string name="camera">Camera</string>
    <string name="facebook">Facebook</string>
    <string name="forecast">Forecast</string>
    <string name="gallery">Gallery</string>
    <string name="gmail">Gmail</string>
    <string name="music">Music</string>
    <string name="news">News</string>
    <string name="night_light">Night Light</string>
    <string name="photos">Photos</string>
    <string name="quotes">Quotes</string>
    <string name="settings">Settings</string>
    <string name="twitter">Twitter</string>
</resources>
