<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/controller_activity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/default_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:rowCount="2">

        <!-- row 1 -->
        <TextView
            android:id="@+id/scroll_up"
            android:text="@string/scroll_up"
            android:drawableTop="@drawable/arrow_down"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />
        <TextView
            android:id="@+id/go_back"
            android:text="@string/go_back"
            android:drawableTop="@drawable/power"
            android:drawablePadding="3dp"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"/>
        <TextView
            android:id="@+id/go_forward"
            android:text="@string/go_forward"
            android:drawableTop="@drawable/power"
            android:drawablePadding="3dp"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />
        <TextView
            android:id="@+id/power"
            android:text="@string/power"
            android:drawableTop="@drawable/arrow_down"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <!-- row 2 -->
        <TextView
            android:id="@+id/scroll_down"
            android:text="@string/scroll_down"
            android:drawableTop="@drawable/arrow_down"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />
        <TextView
            android:id="@+id/increase_screen_size"
            android:text="@string/screen_size"
            android:drawableTop="@drawable/power"
            android:drawablePadding="3dp"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"/>
        <TextView
            android:id="@+id/toggle_listening"
            android:text="@string/listening"
            android:drawableTop="@drawable/power"
            android:drawablePadding="3dp"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />
        <TextView
            android:id="@+id/help"
            android:text="@string/help"
            android:drawableTop="@drawable/arrow_down"
            style="@style/RemoteButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />
    </android.support.v7.widget.GridLayout>

    <!-- horizontal break -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"/>

    <!-- context buttons - these change based on selected options menu / settings / etc -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/context_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>
